[package]
name = "annotations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
octocrab = "0.18.1"
ron = "0.8.0"
serde = { version = "1.0.152", features = [ "serde_derive" ] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = [ "macros" ] } 
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
